--- a/style.css
+++ b/style.css
@@ -303,9 +303,7 @@ a img.aligncenter {
     HEADER
 -------------------------------------------------------------------*/
 
-.navbar-dark{
-	
-}
+
 
 .navbar-dark .navbar-nav .nav-link{
 	color: #ffffff;
@@ -2130,7 +2128,7 @@ select.mobile-device {
     font-weight: 400;
     font-size: 20px;
     text-transform: capitalize;
-    line-height: !important;
+    /* line-height: !important; */
 }
 
 .footer {
@@ -2376,7 +2374,7 @@ select.mobile-device {
     color: #999 !important;
     margin: 0 !important;
     padding: 0 !important;
-    line-height: 1 !important:
+    /* line-height: 1 !important: */
 }
 
 .stat-wrap p {
@@ -2385,7 +2383,7 @@ select.mobile-device {
     margin: 0;
     font-weight: 300;
     padding: 4px 0 0;
-    line-height: 1 !important:
+    /* line-height: 1 !important: */
 }
 
 #preloader {
@@ -2468,3 +2466,55 @@ select.mobile-device {
     border-color: rgba(255, 255, 255, 0.6);
     color: rgba(255, 255, 255, 0.6);
 }
+
+@media only screen and (max-width: 1199px) {
+
+    .social-icons li a {
+        width:25px;
+        height:30px;
+        display:inline-block;
+        line-height:30px;
+        text-align:center;
+        background: rgba(255, 255, 255, 0.1);
+        color: rgba(255,255,255,1);
+        font-size:14px;
+      }    
+
+}
+
+.social-icons li a{
+    -webkit-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+}
+
+#social-icons {
+    padding:0;
+    position: fixed;
+    top: 75%;
+    transform: translateY(-50%);
+    left:0;
+    z-index: 199;
+  }
+  .social-icons {
+    margin:0;
+    padding:0;
+    list-style:none;
+  }
+  .social-icons li {
+    display: block;
+    margin: 1px 0px;
+  }
+  .social-icons li a {
+    width:50px;
+    height:50px;
+    display:inline-block;
+    line-height:50px;
+    text-align:center;
+    background: rgba(31, 31, 31, 0.5);
+    color: rgba(255,255,255,1);
+    font-size:18px;
+  }
+  .social-icons li a:hover {
+    color:lightgray;
+    background-color: #1f1f1f;
+  }
