--- a/style.css
+++ b/style.css
@@ -818,7 +818,7 @@ xclip
     opacity: 0.3;
 }
 
-.logos img:hover {
+.logos :hover {
     opacity: 0.5;
 }
 
@@ -2607,4 +2607,16 @@ select.mobile-device {
     height: 6px;
     background-color:#383e56;
     border-radius: 3px;
+  }
+
+
+  /* word cloud  */
+  #myChart {
+    height: 100%;
+    width: 100%;
+    min-height: 150px;
+  }
+   
+  .zc-ref {
+    display: none;
   }
